# $Id$

2008-02-17	Konstantin V. Arkhipov

	* main/DAOs/Workers/TransparentDaoWorker.class.php: now extends from
	CommonDaoWorker to eliminate code duplication.

	* main/DAOs/Workers/: added expires argument to cachedFetchObject().

2008-02-15	Konstantin V. Arkhipov

	* main/DAOs/StorableDAO.class.php: mergeWithOld() renamed to unite().

2008-02-14	Ivan Y. Khvostishkov

	* main/DAOs/StorableDAO.class.php: mergeWithOld() method extracted
	from merge().

	* main/ProtoBuilders/DTOProto.class.php: validateSelf() extracted from
	validate().

2008-02-11	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: getListByIds() now preserves
	requested order in resulting list.

	* main/Utils/ArrayUtils.class.php: regularizeList() added.

2008-02-08	Ivan Y. Khvostishkov

	* meta/classes/MetaConfiguration.class.php: fixed identifier names
	sanity check.

2008-02-08	Konstantin V. Arkhipov

	* meta/: size attribute added to identifier.

	* meta/classes/MetaClassProperty.class.php: identifier can be any type
	now.

2008-02-07	Konstantin V. Arkhipov

	* main/DAOs/StorableDAO.class.php: more efficient merge().

2008-02-01	Ivan Y. Khvostishkov

	* main/Net/Mail/Mail.class.php: setSendmailArgs(): used for setting 5th
	argument for mail() function.

2008-01-30	Ivan Y. Khvostishkov

	* main/ProtoBuilders/DTOProto.class.php: validate() and validateList()
	now validate objects recursively.

2008-01-21	Denis M. Gabaidulin

	* core/Base/Assert.class.php: isNotFalse().

	* main/Utils/IO/FileOutputStream.class.php: now throws IOException,
	if stream file resource does not exist.

2008-01-21	Konstantin V. Arkhipov

	* 1.0.1 released.

2008-01-16	Konstantin V. Arkhipov

	* main/DAOs/Workers/BaseDaoWorker.class.php,
	main/DAOs/Workers/NullDaoWorker.class.php: dropById() and dropByIds()
	now returns deleted rows count.

2008-01-16	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: isLesser(), isGreater(),
	isLesserOrEqual(), isGreaterOrEqual().

2008-01-10	Konstantin V. Arkhipov
